# FFmpeg-better-hap

./: CMakeLists.txt  README.md  ff-build-mod.7z
libavcodec/: Makefile  dxv.c  hap.h  hapdec.c  hapenc.c  texturedsp.c  texturedsp.h  texturedsp_template.c  texturedspenc.c  txd.c
libavcodec/bc7enc/: bcenc_compat.cpp  bcenc_compat.h  rgbcx.h
libavformat/: isom_tags.c
